--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@react-pdf/renderer": "^3.3.4",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
-    "pdfjs-dist": "^4.0.379",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^6.22.3",
     "react-signature-canvas": "^1.0.6",
     "zustand": "^4.5.2"
@@ -36,6 +36,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^6.3.5"
   }
 }
