--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/utilities": "^3.2.2",
     "@react-pdf/renderer": "^3.3.4",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
     "react-pdf": "^9.2.1",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.22.3",
     "react-signature-canvas": "^1.0.6",
     "zustand": "^4.5.2"
@@ -25,6 +29,7 @@
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-resizable": "^3.0.8",
     "@types/react-signature-canvas": "^1.0.5",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
