--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.3.4",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.9.0",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
