--- a/signsecure/pyproject.toml
+++ b/signsecure/pyproject.toml
@@ -145,9 +145,61 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-]
 
+[tool.poetry.dependencies]
+python = "^3.12"
+
+# Core Dependencies with Compatible Versions
+python-slugify = "^8.0.4"
+Pillow = "^11.2.1"
+argon2-cffi = "^23.1.0"
+whitenoise = "^6.9.0"
+redis = "^6.1.0"
+hiredis = "^3.1.1"
+celery = "^5.5.2"
+django-celery-beat = "^2.8.1"
+flower = "^2.0.1"
+uvicorn = { version = "^0.34.2", extras = ["standard"] }
+uvicorn-worker = "^0.3.0"
+django = "^5.1.9"
+django-environ = "^0.12.0"
+django-model-utils = "^5.0.0"
+django-allauth = { version = "^65.8.0", extras = ["mfa"] }
+django-crispy-forms = "^2.4"
+crispy-bootstrap5 = "^2025.4"
+django-redis = "^5.4.0"
+djangorestframework = "^3.16.0"
+django-cors-headers = "^4.7.0"
+drf-spectacular = "^0.28.0"
+gunicorn = "^23.0.0"
+psycopg = { version = "^3.2.9", extras = ["binary"] }
+sentry-sdk = "^2.28.0"
+django-anymail = { version = "^13.0", extras = ["sendgrid"] }
+
+[tool.poetry.dev-dependencies]
+Werkzeug = { version = "^3.1.3", extras = ["watchdog"] }
+ipdb = "^0.13.13"
+watchfiles = "^1.0.5"
+
+mypy = "^1.15.0"
+django-stubs = { version = "^5.2.0", extras = ["compatible-mypy"] }
+pytest = "^8.3.5"
+pytest-sugar = "^1.0.0"
+djangorestframework-stubs = "^3.16.0"
+
+sphinx = "^8.2.3"
+sphinx-autobuild = "^2024.10.3"
+
+ruff = "^0.11.10"
+coverage = "^7.8.0"
+djlint = "^1.36.4"
+pre-commit = "^4.2.0"
+
+factory-boy = "^3.3.2"
+django-debug-toolbar = "^5.2.0"
+django-extensions = "^4.1"
+django-coverage-plugin = "^3.1.0"
+pytest-django = "^4.11.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
