--- a/signsecure/pyproject.toml
+++ b/signsecure/pyproject.toml
@@ -175,6 +175,7 @@ gunicorn = "^23.0.0"
 psycopg = { version = "^3.2.9", extras = ["binary"] }
 sentry-sdk = "^2.28.0"
 django-anymail = { version = "^13.0", extras = ["sendgrid"] }
+pyjwt = "^2.10.1"
 
 [tool.poetry.dev-dependencies]
 Werkzeug = { version = "^3.1.3", extras = ["watchdog"] }
